--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 .app {
-  height: 500px;
+  height: 200px;
   max-width: 400px;
   margin: 20px auto;
   padding: 10px 20px;
@@ -7,6 +7,11 @@
   border-radius: 20px;
   box-shadow: 0 0 15px #bc8f8f;
   background: #f2f3f4;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .app__title {
@@ -23,10 +28,35 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 500;
+  font-size: 23px;
+}
+
+.app__buttons-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .button {
   font-weight: 500;
   padding: 3px 10px 6px;
   background-color: #bc8f8f;
+}
+
+.button--start {
+  background-color: #00CC33;
+}
+
+.button--stop {
+  background-color: #CC6666;
+}
+
+.button--wait {
+  background-color: #FFCC66;
+}
+
+.button--reset {
+  background-color: #CC99FF;
 }
